--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "humbug/php-scoper",
+    "name": "plesk/php-scoper",
     "description": "Prefixes all PHP namespaces in a file or directory.",
     "license": "MIT",
     "authors": [
